Newsletter button mobile fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,14 +484,17 @@ section {
 
 .hero .btn-newsletter {
   margin-top: 30px;
-  line-height: 0;
   padding: 15px 54px;
   border-radius: 4px;
   transition: 0.5s;
   color: #fff;
   background: rgb(168, 80, 80);
-  box-shadow: 0px 5px 30px rgba(168, 80, 80, 0.5)
-  outline: none
+  box-shadow: 0px 5px 30px rgba(168, 80, 80, 0.5);
+  outline: none;
+}
+
+.btn-newsletter span {
+  word-wrap: break-word;
 }
 
 .hero .btn-get-started span {
